Temperatur als Kategorie hinzugefügt

--- a/Datenaufbereitung.ipynb
+++ b/Datenaufbereitung.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Temperatur in kategoriale Variable umwandeln (Kategorien numerisch kodiert (kalt=0, warm=4))\n",
+    "umsatzdaten['Temperatur_kat'] = pd.cut(umsatzdaten['Temperatur'], bins=[-10, 0, 10, 20, 30, 40], labels=[0, 1, 2, 3, 4])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -153,12 +163,12 @@
       "3 2012-01-04          NaN     NaN         4.0      5.6875   \n",
       "4 2012-01-05          NaN     NaN         6.0      5.3000   \n",
       "\n",
-      "   Windgeschwindigkeit  Wettercode  KielerWoche  Feiertag  \n",
-      "0                 14.0        58.0          NaN         1  \n",
-      "1                 12.0         NaN          NaN         0  \n",
-      "2                 18.0        63.0          NaN         0  \n",
-      "3                 19.0        80.0          NaN         0  \n",
-      "4                 23.0        80.0          NaN         0  \n"
+      "   Windgeschwindigkeit  Wettercode  KielerWoche Temperatur_kat  Feiertag  \n",
+      "0                 14.0        58.0          NaN              1         1  \n",
+      "1                 12.0         NaN          NaN              1         0  \n",
+      "2                 18.0        63.0          NaN              1         0  \n",
+      "3                 19.0        80.0          NaN              1         0  \n",
+      "4                 23.0        80.0          NaN              1         0  \n"
      ]
     }
    ],
@@ -204,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -218,12 +228,19 @@
       "3 2012-01-04          NaN     NaN         4.0      5.6875   \n",
       "4 2012-01-05          NaN     NaN         6.0      5.3000   \n",
       "\n",
-      "   Windgeschwindigkeit  Wettercode  KielerWoche  Feiertag  Wochenende  \n",
-      "0                 14.0        58.0          NaN         1        True  \n",
-      "1                 12.0         NaN          NaN         0       False  \n",
-      "2                 18.0        63.0          NaN         0       False  \n",
-      "3                 19.0        80.0          NaN         0       False  \n",
-      "4                 23.0        80.0          NaN         0       False  \n"
+      "   Windgeschwindigkeit  Wettercode  KielerWoche Temperatur_kat  Feiertag  \\\n",
+      "0                 14.0        58.0          NaN              1         1   \n",
+      "1                 12.0         NaN          NaN              1         0   \n",
+      "2                 18.0        63.0          NaN              1         0   \n",
+      "3                 19.0        80.0          NaN              1         0   \n",
+      "4                 23.0        80.0          NaN              1         0   \n",
+      "\n",
+      "   Wochenende  \n",
+      "0        True  \n",
+      "1       False  \n",
+      "2       False  \n",
+      "3       False  \n",
+      "4       False  \n"
      ]
     }
    ],
@@ -237,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -251,19 +268,19 @@
       "3 2012-01-04          NaN     NaN         4.0      5.6875   \n",
       "4 2012-01-05          NaN     NaN         6.0      5.3000   \n",
       "\n",
-      "   Windgeschwindigkeit  Wettercode  KielerWoche  Feiertag  Wochenende  Monat  \\\n",
-      "0                 14.0        58.0            0         1           1      1   \n",
-      "1                 12.0         NaN            0         0           0      1   \n",
-      "2                 18.0        63.0            0         0           0      1   \n",
-      "3                 19.0        80.0            0         0           0      1   \n",
-      "4                 23.0        80.0            0         0           0      1   \n",
+      "   Windgeschwindigkeit  Wettercode  KielerWoche Temperatur_kat  Feiertag  \\\n",
+      "0                 14.0        58.0            0              1         1   \n",
+      "1                 12.0         NaN            0              1         0   \n",
+      "2                 18.0        63.0            0              1         0   \n",
+      "3                 19.0        80.0            0              1         0   \n",
+      "4                 23.0        80.0            0              1         0   \n",
       "\n",
-      "   Temp_abw  \n",
-      "0         1  \n",
-      "1         0  \n",
-      "2         0  \n",
-      "3         0  \n",
-      "4         0  \n",
+      "   Wochenende  Monat  Temp_abw  \n",
+      "0           1      1         1  \n",
+      "1           0      1         0  \n",
+      "2           0      1         0  \n",
+      "3           0      1         0  \n",
+      "4           0      1         0  \n",
       "Temp_abw\n",
       "0    8896\n",
       "1    1389\n",
@@ -295,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -365,38 +382,41 @@
       "Windgeschwindigkeit -0.020052    -0.009078  0.014705    0.042813    0.002133   \n",
       "Wettercode          -0.114740     0.009547 -0.010091    0.525852   -0.083311   \n",
       "KielerWoche          0.033931    -0.010207  0.058244    0.010423    0.141328   \n",
+      "Temperatur_kat      -0.009197    -0.044658  0.206505   -0.380492    0.925928   \n",
       "Feiertag             0.000659    -0.006163  0.043574   -0.031793    0.005243   \n",
       "Wochenende           0.002347     0.000457  0.163097   -0.006312   -0.001017   \n",
       "Monat               -0.044090     0.080817  0.013889    0.032380    0.217218   \n",
       "Temp_abw             0.029410    -0.000134 -0.007693   -0.099163   -0.001344   \n",
       "\n",
-      "                     Windgeschwindigkeit  Wettercode  KielerWoche  Feiertag  \\\n",
-      "Datum                          -0.020052   -0.114740     0.033931  0.000659   \n",
-      "Warengruppe                    -0.009078    0.009547    -0.010207 -0.006163   \n",
-      "Umsatz                          0.014705   -0.010091     0.058244  0.043574   \n",
-      "Bewoelkung                      0.042813    0.525852     0.010423 -0.031793   \n",
-      "Temperatur                      0.002133   -0.083311     0.141328  0.005243   \n",
-      "Windgeschwindigkeit             1.000000    0.120270     0.021956  0.033266   \n",
-      "Wettercode                      0.120270    1.000000     0.061209 -0.009232   \n",
-      "KielerWoche                     0.021956    0.061209     1.000000 -0.019202   \n",
-      "Feiertag                        0.033266   -0.009232    -0.019202  1.000000   \n",
-      "Wochenende                     -0.000862    0.019781     0.054930 -0.052005   \n",
-      "Monat                          -0.109300    0.031707    -0.026953 -0.015390   \n",
-      "Temp_abw                        0.017403   -0.014356     0.022605 -0.000611   \n",
+      "                     Windgeschwindigkeit  Wettercode  KielerWoche  \\\n",
+      "Datum                          -0.020052   -0.114740     0.033931   \n",
+      "Warengruppe                    -0.009078    0.009547    -0.010207   \n",
+      "Umsatz                          0.014705   -0.010091     0.058244   \n",
+      "Bewoelkung                      0.042813    0.525852     0.010423   \n",
+      "Temperatur                      0.002133   -0.083311     0.141328   \n",
+      "Windgeschwindigkeit             1.000000    0.120270     0.021956   \n",
+      "Wettercode                      0.120270    1.000000     0.061209   \n",
+      "KielerWoche                     0.021956    0.061209     1.000000   \n",
+      "Temperatur_kat                 -0.023541   -0.097125     0.120709   \n",
+      "Feiertag                        0.033266   -0.009232    -0.019202   \n",
+      "Wochenende                     -0.000862    0.019781     0.054930   \n",
+      "Monat                          -0.109300    0.031707    -0.026953   \n",
+      "Temp_abw                        0.017403   -0.014356     0.022605   \n",
       "\n",
-      "                     Wochenende     Monat  Temp_abw  \n",
-      "Datum                  0.002347 -0.044090  0.029410  \n",
-      "Warengruppe            0.000457  0.080817 -0.000134  \n",
-      "Umsatz                 0.163097  0.013889 -0.007693  \n",
-      "Bewoelkung            -0.006312  0.032380 -0.099163  \n",
-      "Temperatur            -0.001017  0.217218 -0.001344  \n",
-      "Windgeschwindigkeit   -0.000862 -0.109300  0.017403  \n",
-      "Wettercode             0.019781  0.031707 -0.014356  \n",
-      "KielerWoche            0.054930 -0.026953  0.022605  \n",
-      "Feiertag              -0.052005 -0.015390 -0.000611  \n",
-      "Wochenende             1.000000  0.000053 -0.003228  \n",
-      "Monat                  0.000053  1.000000 -0.063946  \n",
-      "Temp_abw              -0.003228 -0.063946  1.000000  \n"
+      "                     Temperatur_kat  Feiertag  Wochenende     Monat  Temp_abw  \n",
+      "Datum                     -0.009197  0.000659    0.002347 -0.044090  0.029410  \n",
+      "Warengruppe               -0.044658 -0.006163    0.000457  0.080817 -0.000134  \n",
+      "Umsatz                     0.206505  0.043574    0.163097  0.013889 -0.007693  \n",
+      "Bewoelkung                -0.380492 -0.031793   -0.006312  0.032380 -0.099163  \n",
+      "Temperatur                 0.925928  0.005243   -0.001017  0.217218 -0.001344  \n",
+      "Windgeschwindigkeit       -0.023541  0.033266   -0.000862 -0.109300  0.017403  \n",
+      "Wettercode                -0.097125 -0.009232    0.019781  0.031707 -0.014356  \n",
+      "KielerWoche                0.120709 -0.019202    0.054930 -0.026953  0.022605  \n",
+      "Temperatur_kat             1.000000  0.017664   -0.011496  0.201724  0.006219  \n",
+      "Feiertag                   0.017664  1.000000   -0.052005 -0.015390 -0.000611  \n",
+      "Wochenende                -0.011496 -0.052005    1.000000  0.000053 -0.003228  \n",
+      "Monat                      0.201724 -0.015390    0.000053  1.000000 -0.063946  \n",
+      "Temp_abw                   0.006219 -0.000611   -0.003228 -0.063946  1.000000  \n"
      ]
     }
    ],
@@ -407,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +440,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.714\n",
       "Method:                 Least Squares   F-statistic:                     2583.\n",
       "Date:                Fri, 24 May 2024   Prob (F-statistic):               0.00\n",
-      "Time:                        15:44:11   Log-Likelihood:                -53734.\n",
+      "Time:                        15:54:49   Log-Likelihood:                -53734.\n",
       "No. Observations:                9318   AIC:                         1.075e+05\n",
       "Df Residuals:                    9308   BIC:                         1.076e+05\n",
       "Df Model:                           9                                         \n",
