Kleine Änderungen bei Kalenderdaten zu den Features

--- a/0_DataPreparation/Features.ipynb
+++ b/0_DataPreparation/Features.ipynb
@@ -12,14 +12,13 @@
    "metadata": {},
    "source": [
     "## Kalenderdaten\n",
-    "- Feiertage\n",
+    "- Feiertage (bereits in Datenaufbereitung -> Frage: Welche Feiertage wurden genutzt? Schleswig-Holstein?)\n",
     "- Schulferien\n",
     "- Wochentage und Wochenenden\n",
-    "- Saisonale Ereignisse (z.B. Black Friday, Weihnachten, Ostern, u.ä.)\n",
+    "- Saisonale Ereignisse (z.B. Weihnachten, Ostern, u.ä.)\n",
     "- vorheriger Feiertag\n",
     "- Tage bis zum nächsten Feiertag\n",
-    "- Tage der Woche\n",
-    "- Dauer der Schulferien"
+    "- Tage der Woche"
    ]
   },
   {
