--- a/Datenaufbereitung.ipynb
+++ b/Datenaufbereitung.ipynb
@@ -209,7 +209,9 @@
     "umsatzdaten = pd.merge(umsatzdaten, holiday_df, on='Datum', how='outer')\n",
     "\n",
     "# Anzeigen der ersten Zeilen des DataFrame\n",
-    "print(umsatzdaten.head())"
+    "print(umsatzdaten.head())\n",
+    "\n",
+    "# "
    ]
   },
   {
