--- a/Datenaufbereitung.ipynb
+++ b/Datenaufbereitung.ipynb
@@ -793,6 +793,37 @@
     "# Zusammenfassung des Modells ausgeben\n",
     "print(model.summary())\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training dataset dimensions: (7199, 23)\n",
+      "Validation dataset dimensions: (2057, 23)\n",
+      "Test dataset dimensions: (1029, 23)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Umsatzdaten aufteilen\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "# Set a random seed for reproducibility\n",
+    "random_state = 42\n",
+    "# First, split the data into training (70%) and remaining (30%)\n",
+    "train_data, remaining_data = train_test_split(umsatzdaten, train_size=0.7, random_state=random_state)\n",
+    "# Now split the remaining data into validation (2/3 of remaining) and test (1/3 of remaining)\n",
+    "validation_data, test_data = train_test_split(remaining_data, test_size=0.3333, random_state=random_state)\n",
+    "# Check the dimensions of the datasets\n",
+    "print(\"Training dataset dimensions:\", train_data.shape)\n",
+    "print(\"Validation dataset dimensions:\", validation_data.shape)\n",
+    "print(\"Test dataset dimensions:\", test_data.shape)\n"
+   ]
   }
  ],
  "metadata": {
