--- a/Datenaufbereitung.ipynb
+++ b/Datenaufbereitung.ipynb
@@ -1612,6 +1612,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Datensätze speichern"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Datensätze speichern\n",
+    "merged_data.to_csv('0_DataPreparation/merged_data.csv', index=False)\n",
+    "imputed_data_KNN.to_csv('0_DataPreparation/imputed_data_KNN.csv', index=False)\n",
+    "imputed_data_irmi.to_csv('0_DataPreparation/imputed_data_irmi.csv', index=False)\n",
+    "data_no_dates.to_csv('0_DataPreparation/imputed_data_RF.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Lineares Modell ohne Interaktionseffekte"
    ]
   },
