--- a/Lineare_Modelle.ipynb
+++ b/Lineare_Modelle.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -44,8 +44,8 @@
       "Dep. Variable:                 Umsatz   R-squared:                       0.732\n",
       "Model:                            OLS   Adj. R-squared:                  0.731\n",
       "Method:                 Least Squares   F-statistic:                     2106.\n",
-      "Date:                Fri, 14 Jun 2024   Prob (F-statistic):               0.00\n",
-      "Time:                        11:23:11   Log-Likelihood:                -53273.\n",
+      "Date:                Sat, 22 Jun 2024   Prob (F-statistic):               0.00\n",
+      "Time:                        05:06:02   Log-Likelihood:                -53273.\n",
       "No. Observations:                9287   AIC:                         1.066e+05\n",
       "Df Residuals:                    9274   BIC:                         1.067e+05\n",
       "Df Model:                          12                                         \n",
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -106,46 +106,52 @@
      "text": [
       "                            OLS Regression Results                            \n",
       "==============================================================================\n",
-      "Dep. Variable:                 Umsatz   R-squared:                       0.870\n",
-      "Model:                            OLS   Adj. R-squared:                  0.864\n",
-      "Method:                 Least Squares   F-statistic:                     142.1\n",
-      "Date:                Fri, 14 Jun 2024   Prob (F-statistic):           3.55e-88\n",
-      "Time:                        11:24:20   Log-Likelihood:                -1242.6\n",
-      "No. Observations:                 223   AIC:                             2507.\n",
-      "Df Residuals:                     212   BIC:                             2545.\n",
-      "Df Model:                          10                                         \n",
+      "Dep. Variable:                 Umsatz   R-squared:                       0.737\n",
+      "Model:                            OLS   Adj. R-squared:                  0.736\n",
+      "Method:                 Least Squares   F-statistic:                     1175.\n",
+      "Date:                Sat, 22 Jun 2024   Prob (F-statistic):               0.00\n",
+      "Time:                        05:07:00   Log-Likelihood:                -52922.\n",
+      "No. Observations:                9246   AIC:                         1.059e+05\n",
+      "Df Residuals:                    9223   BIC:                         1.061e+05\n",
+      "Df Model:                          22                                         \n",
       "Covariance Type:            nonrobust                                         \n",
-      "=========================================================================================\n",
-      "                            coef    std err          t      P>|t|      [0.025      0.975]\n",
-      "-----------------------------------------------------------------------------------------\n",
-      "Intercept                 1.9776      1.591      1.243      0.215      -1.158       5.113\n",
-      "C(Warengruppe)[T.2.0]   394.5530     21.891     18.024      0.000     351.402     437.704\n",
-      "C(Warengruppe)[T.3.0]    94.1732     20.342      4.629      0.000      54.074     134.272\n",
-      "C(Warengruppe)[T.4.0]   -63.4873     27.250     -2.330      0.021    -117.202      -9.773\n",
-      "C(Warengruppe)[T.5.0]   170.6318     22.898      7.452      0.000     125.495     215.768\n",
-      "C(Warengruppe)[T.6.0] -2.974e-14   8.42e-15     -3.534      0.001   -4.63e-14   -1.32e-14\n",
-      "C(Feiertag)[T.1]       5.952e-15   1.16e-15      5.140      0.000    3.67e-15    8.23e-15\n",
-      "C(Jahreszeit)[T.2]     2.384e-14   2.58e-15      9.240      0.000    1.88e-14    2.89e-14\n",
-      "C(Jahreszeit)[T.3]        1.9776      1.591      1.243      0.215      -1.158       5.113\n",
-      "C(Jahreszeit)[T.4]     2.478e-14   4.22e-15      5.871      0.000    1.65e-14    3.31e-14\n",
-      "C(Wochenende)[T.True]    65.9452     10.117      6.518      0.000      46.002      85.889\n",
-      "Temperatur                0.0309      0.075      0.412      0.681      -0.117       0.179\n",
-      "Umsatz_lag1              -0.0349      0.068     -0.515      0.607      -0.168       0.098\n",
-      "Umsatz_lag7               0.0131      0.053      0.246      0.806      -0.092       0.118\n",
-      "Wettercode                1.7420      1.023      1.703      0.090      -0.274       3.758\n",
-      "Wettercode:Temperatur    -0.0734      0.052     -1.417      0.158      -0.175       0.029\n",
-      "Monat                    11.8653      9.543      1.243      0.215      -6.947      30.677\n",
-      "Monat:Temperatur          0.1855      0.450      0.412      0.681      -0.701       1.073\n",
+      "=================================================================================================================\n",
+      "                                                    coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "-----------------------------------------------------------------------------------------------------------------\n",
+      "Intercept                                        53.9871      4.340     12.439      0.000      45.480      62.494\n",
+      "C(Warengruppe)[T.2.0]                           289.3610      3.048     94.924      0.000     283.386     295.336\n",
+      "C(Warengruppe)[T.3.0]                            20.7938      2.983      6.971      0.000      14.946      26.641\n",
+      "C(Warengruppe)[T.4.0]                           -28.2997      3.294     -8.591      0.000     -34.757     -21.842\n",
+      "C(Warengruppe)[T.5.0]                           172.4035      3.028     56.939      0.000     166.468     178.339\n",
+      "C(Warengruppe)[T.6.0]                           -37.9165      5.097     -7.438      0.000     -47.909     -27.924\n",
+      "C(Feiertag)[T.1]                                 62.4217      7.549      8.269      0.000      47.625      77.219\n",
+      "C(Jahreszeit)[T.2]                                6.2958      2.879      2.186      0.029       0.651      11.940\n",
+      "C(Jahreszeit)[T.3]                               35.1011      3.705      9.474      0.000      27.839      42.363\n",
+      "C(Jahreszeit)[T.4]                              -15.5251      3.089     -5.026      0.000     -21.580      -9.470\n",
+      "C(Wochenende)[T.True]                            46.6955      1.785     26.153      0.000      43.196      50.195\n",
+      "C(Kieler_Woche)[T.True]                         -34.8516     11.369     -3.066      0.002     -57.137     -12.566\n",
+      "C(Kieler_Woche)[T.True]:C(Warengruppe)[T.2.0]   130.5653     15.850      8.237      0.000      99.495     161.636\n",
+      "C(Kieler_Woche)[T.True]:C(Warengruppe)[T.3.0]    37.9608     15.848      2.395      0.017       6.895      69.027\n",
+      "C(Kieler_Woche)[T.True]:C(Warengruppe)[T.4.0]   -24.8024     16.054     -1.545      0.122     -56.271       6.666\n",
+      "C(Kieler_Woche)[T.True]:C(Warengruppe)[T.5.0]    31.9570     15.867      2.014      0.044       0.854      63.060\n",
+      "C(Kieler_Woche)[T.True]:C(Warengruppe)[T.6.0]  1.161e-14   4.47e-15      2.597      0.009    2.85e-15    2.04e-14\n",
+      "Temperatur                                       -1.4605      0.419     -3.490      0.000      -2.281      -0.640\n",
+      "Umsatz_lag1                                       0.1224      0.010     11.820      0.000       0.102       0.143\n",
+      "Umsatz_lag7                                       0.0241      0.007      3.337      0.001       0.010       0.038\n",
+      "Wettercode                                       -0.2121      0.056     -3.767      0.000      -0.323      -0.102\n",
+      "Wettercode:Temperatur                             0.0145      0.004      3.636      0.000       0.007       0.022\n",
+      "Monat                                            -0.4427      0.401     -1.105      0.269      -1.228       0.342\n",
+      "Monat:Temperatur                                  0.4274      0.056      7.598      0.000       0.317       0.538\n",
       "==============================================================================\n",
-      "Omnibus:                       37.008   Durbin-Watson:                   1.974\n",
-      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):               81.361\n",
-      "Skew:                           0.784   Prob(JB):                     2.15e-18\n",
-      "Kurtosis:                       5.510   Cond. No.                     3.79e+21\n",
+      "Omnibus:                     9759.403   Durbin-Watson:                   1.999\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):          2706709.662\n",
+      "Skew:                           4.776   Prob(JB):                         0.00\n",
+      "Kurtosis:                      86.274   Cond. No.                     5.15e+19\n",
       "==============================================================================\n",
       "\n",
       "Notes:\n",
       "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
-      "[2] The smallest eigenvalue is 1.87e-35. This might indicate that there are\n",
+      "[2] The smallest eigenvalue is 1.22e-30. This might indicate that there are\n",
       "strong multicollinearity problems or that the design matrix is singular.\n"
      ]
     }
@@ -158,7 +164,7 @@
     "import itertools\n",
     "\n",
     "# Formel für die multiple lineare Regression mit ausgewählten Interaktionseffekten\n",
-    "mod_int = smf.ols('Umsatz ~ C(Warengruppe) + Temperatur + C(Feiertag) + C(Jahreszeit) + C(Wochenende) + Umsatz_lag1 + Umsatz_lag7 + C(KielerWoche)*C(Warengruppe) + Wettercode*Temperatur + Monat*Temperatur', data = data_RF).fit()\n",
+    "mod_int = smf.ols('Umsatz ~ C(Warengruppe) + Temperatur + C(Feiertag) + C(Jahreszeit) + C(Wochenende) + Umsatz_lag1 + Umsatz_lag7 + C(Kieler_Woche)*C(Warengruppe) + Wettercode*Temperatur + Monat*Temperatur', data = data_RF).fit()\n",
     "\n",
     "# Print the summary\n",
     "print(mod_int.summary())\n"
@@ -180,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
