--- a/0_DataPreparation/Daten.ipynb
+++ b/0_DataPreparation/Daten.ipynb
@@ -28,6 +28,11 @@
       "2024-06-22 05:37:39.720798: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
       "2024-06-22 05:37:40.691471: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+      "2024-06-22 08:11:42.813927: I external/local_tsl/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2024-06-22 08:11:43.798183: I external/local_tsl/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2024-06-22 08:11:45.758987: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2024-06-22 08:11:51.315446: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
      ]
     }
    ],
@@ -53,12 +58,25 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "0       NaN\n",
+      "1       NaN\n",
+      "2       NaN\n",
+      "3       NaN\n",
+      "4       NaN\n",
+      "         ..\n",
+      "10114   NaN\n",
+      "10115   NaN\n",
+      "10116   NaN\n",
+      "10117   NaN\n",
+      "10118   NaN\n",
+      "Name: KielerWoche, Length: 10119, dtype: float64\n",
       "            Datum  Warengruppe  Umsatz  KielerWoche  Bewoelkung  Temperatur  \\\n",
       "0      2012-01-01          NaN     NaN          NaN         8.0      9.8250   \n",
       "1      2012-01-02          NaN     NaN          NaN         7.0      7.4375   \n",
@@ -112,12 +130,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Überprüfung auf fehlende Werte"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Anzahl fehlender Werte pro Spalte:\n",
+      "Datum                     0\n",
+      "Warengruppe             785\n",
+      "Umsatz                  785\n",
+      "KielerWoche            9869\n",
+      "Bewoelkung               71\n",
+      "Temperatur               16\n",
+      "Windgeschwindigkeit      16\n",
+      "Wettercode             2538\n",
+      "dtype: int64\n",
+      "\n",
+      "Gesamte Anzahl fehlender Werte:\n",
+      "14080\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Überprüfung auf fehlende Werte pro Spalte\n",
+    "missing_values = merged_data.isnull()\n",
+    "print(\"Anzahl fehlender Werte pro Spalte:\")\n",
+    "print(missing_values.sum())\n",
+    "\n",
+    "# Gesamte Anzahl fehlender Werte\n",
+    "total_missing_values = missing_values.sum().sum()\n",
+    "print(\"\\nGesamte Anzahl fehlender Werte:\")\n",
+    "print(total_missing_values)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Datum konvertieren / Wochentag / Feiertage hinzufügen"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -216,6 +281,132 @@
     "    'Sommer' if month in [6, 7, 8] else\n",
     "    'Herbst'\n",
     ")\n",
+    "merged_data['UmsatzVortag'] = merged_data['Umsatz'].shift(1).fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Aggregation des Umsatzes nach Warengruppe und Feiertag / nach Wochentag"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    Warengruppe  Feiertag         Umsatz\n",
+      "0           1.0         0  220755.130719\n",
+      "1           1.0         1    1422.092739\n",
+      "2           2.0         0  720654.761650\n",
+      "3           2.0         1   11488.937868\n",
+      "4           3.0         0  292564.935828\n",
+      "5           3.0         1    4552.196877\n",
+      "6           4.0         0  152683.409402\n",
+      "7           4.0         1    2643.428511\n",
+      "8           5.0         0  496870.771156\n",
+      "9           5.0         1    6620.258994\n",
+      "10          6.0         0   19539.657423\n",
+      "    Wochentag_Numerisch  Warengruppe         Umsatz\n",
+      "0                     0          1.0   34349.518577\n",
+      "1                     0          2.0   94518.267009\n",
+      "2                     0          3.0   38768.415694\n",
+      "3                     0          4.0   20668.483499\n",
+      "4                     0          5.0   65505.413757\n",
+      "5                     0          6.0    2633.407614\n",
+      "6                     1          1.0   31035.935115\n",
+      "7                     1          2.0   92908.071950\n",
+      "8                     1          3.0   38040.052609\n",
+      "9                     1          4.0   19807.539861\n",
+      "10                    1          5.0   68043.250991\n",
+      "11                    1          6.0    2950.421577\n",
+      "12                    2          1.0   30686.879782\n",
+      "13                    2          2.0   91747.856697\n",
+      "14                    2          3.0   37755.007020\n",
+      "15                    2          4.0   19276.580698\n",
+      "16                    2          5.0   69612.460394\n",
+      "17                    2          6.0    2516.051662\n",
+      "18                    3          1.0   35131.645020\n",
+      "19                    3          2.0   94031.839875\n",
+      "20                    3          3.0   37253.891937\n",
+      "21                    3          4.0   19532.368451\n",
+      "22                    3          5.0   68808.535855\n",
+      "23                    3          6.0    3013.572798\n",
+      "24                    4          1.0   32718.556908\n",
+      "25                    4          2.0   94979.742448\n",
+      "26                    4          3.0   38620.516552\n",
+      "27                    4          4.0   19738.297666\n",
+      "28                    4          5.0   69157.523580\n",
+      "29                    4          6.0    2784.949199\n",
+      "30                    5          1.0   38593.824977\n",
+      "31                    5          2.0  125001.295223\n",
+      "32                    5          3.0   52594.737848\n",
+      "33                    5          4.0   21738.211629\n",
+      "34                    5          5.0   81447.091239\n",
+      "35                    5          6.0    3028.201958\n",
+      "36                    6          1.0   19660.863080\n",
+      "37                    6          2.0  138956.626316\n",
+      "38                    6          3.0   54084.511046\n",
+      "39                    6          4.0   34565.356110\n",
+      "40                    6          5.0   80916.754334\n",
+      "41                    6          6.0    2613.052615\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Aggregation des Umsatzes nach Warengruppe und Feiertag\n",
+    "umsatz_nach_warengruppe_feiertag = merged_data.groupby(['Warengruppe', 'Feiertag'])['Umsatz'].sum().reset_index()\n",
+    "print(umsatz_nach_warengruppe_feiertag)\n",
+    "\n",
+    "# Aggregation des Umsatzes nach Wochentag und Warengruppe\n",
+    "umsatz_nach_wochentag_warengruppe = merged_data.groupby(['Wochentag_Numerisch', 'Warengruppe'])['Umsatz'].sum().reset_index()\n",
+    "print(umsatz_nach_wochentag_warengruppe)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visualisierung"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'umsatz_je_wochentag_warengruppe' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Erstelle die Visualisierung\u001b[39;00m\n\u001b[1;32m      2\u001b[0m plt\u001b[38;5;241m.\u001b[39mfigure(figsize\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m10\u001b[39m, \u001b[38;5;241m6\u001b[39m))\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m warengruppe \u001b[38;5;129;01min\u001b[39;00m \u001b[43mumsatz_je_wochentag_warengruppe\u001b[49m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWarengruppe\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39munique():\n\u001b[1;32m      4\u001b[0m     data \u001b[38;5;241m=\u001b[39m umsatz_je_wochentag_warengruppe[umsatz_je_wochentag_warengruppe[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWarengruppe\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m==\u001b[39m warengruppe]\n\u001b[1;32m      5\u001b[0m     plt\u001b[38;5;241m.\u001b[39mplot(data[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWochentag_Numerisch\u001b[39m\u001b[38;5;124m\"\u001b[39m], data[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUmsatz\u001b[39m\u001b[38;5;124m\"\u001b[39m], marker\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mo\u001b[39m\u001b[38;5;124m'\u001b[39m, label\u001b[38;5;241m=\u001b[39mwarengruppe)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'umsatz_je_wochentag_warengruppe' is not defined"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1000x600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Erstelle die Visualisierung\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "for warengruppe in umsatz_je_wochentag_warengruppe[\"Warengruppe\"].unique():\n",
+    "    data = umsatz_je_wochentag_warengruppe[umsatz_je_wochentag_warengruppe[\"Warengruppe\"] == warengruppe]\n",
+    "    plt.plot(data[\"Wochentag_Numerisch\"], data[\"Umsatz\"], marker='o', label=warengruppe)\n",
     "\n",
     "\n",
     "print(merged_data)"
